# vllm-probe-hook

./: .gitignore  README.md  pyproject.toml
examples/: generate_hidden_states.py
src/vllm_probe_hook/: __init__.py  _activation_store.py  _hooks.py  llm.py
